@@ -741,7 +741,7 @@ extern	VOID		prntval();
 extern  int		lastExtendedAddress;
 
 /* lklibr.c */
-extern	VOID		addfile();
+extern	int		addfile();
 extern	VOID		addlib();
 extern	VOID		addpath();
 extern	int		fndsym();
